k8s/prod/07-wb-api-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wb-api-statefulset
  namespace: wb-api
  labels:
    app: wb-api-statefulset
spec:
  replicas: 1
  serviceName: wb-api
  selector:
    matchLabels:
      app: wb-api
  template:
    metadata:
      labels:
        app: wb-api
    spec:
      containers:
        - name: wb-api
          image: southamerica-west1-docker.pkg.dev/motivus-257216/motivus-repo/wb-api:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "8"
              memory: 16Gi
            requests:
              cpu: "8"
              memory: 16Gi
        - name: prometheus-to-sd
          image: gcr.io/google-containers/prometheus-to-sd:v0.9.2
          command:
            - /monitor
            - --stackdriver-prefix=custom.googleapis.com
            - --source=wb-api-statefulset:http://localhost:80/metrics?whitelisted=public_thread_pool,public_task_pool,public_processing_registry,private_thread_pool,private_task_pool,private_processing_registry
            - --pod-id=$(POD_NAME)
            - --namespace-id=$(POD_NAMESPACE)
