k8s/prod/07-wb-api-statefulset.yml
# az postgres flexible-server create -g aks_test_clu_group -n wb-db --public-access all -l eastus --sku Standard_B1ms --tier Burstable

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wb-api-statefulset
  namespace: wb-api
  labels:
    app: wb-api-statefulset
spec:
  replicas: 1
  serviceName: wb-api
  selector:
    matchLabels:
      app: wb-api
  template:
    metadata:
      labels:
        app: wb-api
    spec:
      containers:
        - name: wb-api
          image: southamerica-west1-docker.pkg.dev/motivus-257216/motivus-repo/wb-api:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "2"
              memory: 8Gi
            requests:
              cpu: "2"
              memory: 8Gi
